# exploration

./: .gitignore  LICENSE  README.md  a.py  agent.md  corrections.md  project_plan.md  pyproject.toml  requirements.txt
configs/: base.yaml  c1_baseline.yaml  c2_hackable.yaml  c3_kl_low.yaml  c4_kl_med.yaml  c5_kl_high.yaml  c6_length_cap.yaml  c7_kl_new.yaml
docs/: experiment_roadmap.md  installation.md  repository_handoff.md  repository_overview.md  trl_audit.md
game24/: __init__.py  dataset.py  evaluate.py  train.py  zero_shot_eval.py
game24/configs/: game24_c1_baseline.yaml  game24_c2_hackable.yaml
paper/: paper.tex  references.bib
scripts/: eval_all.py  evaluate.py  kaggle_setup.sh  modal_experiment.py  modal_train.py  run_all.py  run_all.sh  run_all_evals.py  train.py  train_kaggle.py  train_multi_gpu.py  train_multi_gpu.sh  zero_shot_eval.py
src/: __init__.py  config.py  dataset.py  evaluation.py  generation.py  logging_utils.py  metrics.py  prompts.py  reward_functions.py  trainer.py  utils.py
tests/: conftest.py  test_config.py  test_dataset.py  test_evaluation.py  test_generation.py  test_logging_utils.py  test_metrics.py  test_prompts.py  test_reward_functions.py  test_trainer.py  test_utils.py
